# flatten_structs

./: Cargo.toml  README.md
src/: lib.rs
