[package]
name = "flatten_structs"
version = "0.1.0"
edition = "2024"
description = "Allows inlining fields into another struct."
repository = "https://github.com/LukaOber/flatten_structs"
license = "MIT"
keywords = ["flatten", "inline", "struct"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
paste = "1.0.15"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
pretty_assertions = "1.4.1"
